--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ repository               : "dut-lujunyu/dut-lujunyu.github.io"
 author:
   # Biographic information
   avatar           : "cv.png"
-  name             : "Your Sidebar Name"
+  name             : "Junyu Lu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : # "Short biography for the left-hand sidebar"
   location         : "Dalian, China"
-  employer         : "Dalian University of Technology"
+  employer         : # "Dalian University of Technology"
   uri              : # URL
   email            : "dutljy@foxmail.com" 
 
