--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "cv.png"
   name             : "Junyu Lu"
   pronouns         : # example: "she/her"  
-  bio              : # "Short biography for the left-hand sidebar"
+  bio              : "A First-year Ph.D. student at Dalian University of Technology"
   location         : "Dalian, China"
   employer         : # "Dalian University of Technology"
   uri              : # URL
