--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "dut-lujunyu/dut-lujunyu.github.io"
 author:
   # Biographic information
   avatar           : "cv.png"
-  name             : "Junyu Lu"
+  name             : "Junyu Lu 卢俊宇"
   pronouns         : # example: "she/her"  
   bio              : "A First-year Ph.D. student at Dalian University of Technology"
   location         : "Dalian, China"
