--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "cv.png"
   name             : "Junyu Lu 卢俊宇"
   pronouns         : # example: "she/her"  
-  bio              : "A First-year Ph.D. student at Dalian University of Technology"
+  bio              : "A first-year Ph.D. student at Dalian University of Technology"
   location         : "Dalian, China"
   employer         : # "Dalian University of Technology"
   uri              : # URL
